@@ -19,10 +19,21 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    testOptions {
+        unitTests.returnDefaultValues = true
+
+    //    unitTests.all {
+            // All the usual Gradle options.
+     //j       jvmArgs '-XX:MaxPermSize=256m'
+       // }
+    }
 }
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
+    testCompile 'junit:junit:4.12'
+    testCompile "org.mockito:mockito-core:1.9.5"
+
 }
 task checkstyle(type: Checkstyle) {
     configFile file("${project.rootDir}/config/checkstyle/google_checks.xml")
